--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,4 +1,4 @@
-.grid-block, .main, .post, .comments li, .comment-form {
+.grid-block, .main, .story, .comments li, .comment-form {
   background: #fff;
   border-radius: 3px;
   padding: 10px;
@@ -29,50 +29,50 @@ body {
 #spinner {
   height: 300px; }
 
-.post {
+.story {
   /* For modern browsers */
   /* For IE 6/7 (trigger hasLayout) */
   *zoom: 1;
   position: relative;
   opacity: 1; }
-  .post:before, .post:after {
+  .story:before, .story:after {
     content: "";
     display: table; }
-  .post:after {
+  .story:after {
     clear: both; }
-  .post.invisible {
+  .story.invisible {
     opacity: 0; }
-  .post.instant {
+  .story.instant {
     -webkit-transition: none;
     -moz-transition: none;
     -o-transition: none;
     transition: none; }
-  .post.animate{
+  .story.animate{
     -webkit-transition: all 300ms 0ms;
     -moz-transition: all 300ms 0ms ease-in;
     -o-transition: all 300ms 0ms ease-in;
     transition: all 300ms 0ms ease-in; }
-  .post .upvote {
+  .story .upvote {
     display: block;
     margin: 7px 12px 0 0;
     float: left; }
-  .post .post-content {
+  .story .story-content {
     float: left; }
-    .post .post-content h3 {
+    .story .story-content h3 {
       margin: 0;
       line-height: 1.4;
       font-size: 18px; }
-      .post .post-content h3 a {
+      .story .story-content h3 a {
         display: inline-block;
         margin-right: 5px; }
-      .post .post-content h3 span {
+      .story .story-content h3 span {
         font-weight: normal;
         font-size: 14px;
         display: inline-block;
         color: #aaaaaa; }
-    .post .post-content p {
+    .story .story-content p {
       margin: 0; }
-  .post .discuss {
+  .story .discuss {
     display: block;
     float: right;
     margin-top: 7px; }
@@ -111,7 +111,7 @@ body {
     text-decoration: none;
     background: rgba(0, 0, 0, 0.1); }
 
-.posts .spinner-container{
+.stories .spinner-container{
   position: relative;
   height: 100px;
 }
