--- a/client/templates/stories/story_item.html
+++ b/client/templates/stories/story_item.html
@@ -3,5 +3,6 @@
     <div class="story-content">
       <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
     </div>
+    <a href="{{pathFor 'storyPage'}}" class="discuss btn btn-default">View Story</a>
   </div>
 </template>
