--- a/client/templates/stories/story_item.html
+++ b/client/templates/stories/story_item.html
@@ -2,6 +2,10 @@
   <div class="story">
     <div class="story-content">
       <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
+      <p>
+        submitted by {{author}}
+        {{#if ownStory}}<a href="{{pathFor 'storyEdit'}}">Edit</a>{{/if}}
+      </p>
     </div>
     <a href="{{pathFor 'storyPage'}}" class="discuss btn btn-default">View Story</a>
   </div>
