--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -1,5 +1,11 @@
 <template name="storyPage">
   <div class="story-page page">
     {{> storyItem}}
+
+    <ul class="tiles">
+      {{#each tiles}}
+        {{> tileItem}}
+      {{/each}}
+    </ul>
   </div>
 </template>
