--- a/client/templates/stories/story_item.html
+++ b/client/templates/stories/story_item.html
@@ -4,6 +4,7 @@
       <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
       <p>
         submitted by {{author}}
+        <a href="{{pathFor 'storyPage'}}">{{tilesCount}} tiles</a>
         {{#if ownStory}}<a href="{{pathFor 'storyEdit'}}">Edit</a>{{/if}}
       </p>
     </div>
