created form to submit comments

--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -7,5 +7,11 @@
         {{> tileItem}}
       {{/each}}
     </ul>
+
+    {{#if currentUser}}
+      {{> tileSubmit}}
+    {{else}}
+      <p>Please log in to add tiles.</p>
+    {{/if}}
   </div>
 </template>
