added simple login/logout functionality

--- a/client/templates/stories/stories_list.html
+++ b/client/templates/stories/stories_list.html
@@ -1,4 +1,9 @@
 <template name="storiesList">
+
+  {{#unless currentUser }}
+    {{> loginButtons}}
+  {{/unless}}
+
   <div class="stories">
     <div class="wrapper">
       {{#each stories}}
