--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -14,7 +14,9 @@
         {{#if currentUser}}<li><a href="{{pathFor 'storySubmit'}}">Submit Story</a></li>{{/if}}
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        {{> loginButtons}}
+        {{#if currentUser}}
+          {{>logout}}
+        {{/if}}
       </ul>
     </div>
   </nav>
