--- a/client/templates/includes/login.html
+++ b/client/templates/includes/login.html
@@ -4,4 +4,5 @@
         <input type="password" name="loginPassword" placeholder="Password">
         <input type="submit" value="Login">
     </form>
+    <a href="#" id="goRegister">Register</a>
 </template>
