--- a/client/templates/includes/login_screen.html
+++ b/client/templates/includes/login_screen.html
@@ -2,8 +2,12 @@
   <div id="login-screen">
     <p class="login-heading lead"><img src="http://static1.squarespace.com/static/55a95d75e4b0ca41a09fafe7/t/55ad2769e4b0ef0d23b4e452/1481197561871/?format=1500w"/><br/>Log in to Orbitist</p>
     <div class="login-form">
-      {{> register}}
-      {{> login}}
+      {{#if isCurrentLoginScreen 'register'}}
+        {{> register}}
+      {{/if}}
+      {{#if isCurrentLoginScreen 'login'}}
+        {{> login}}
+      {{/if}}
     </div><!-- login-form -->
   </div><!-- login-screen -->
 </template>
