--- a/client/templates/includes/register.html
+++ b/client/templates/includes/register.html
@@ -4,4 +4,5 @@
         <input type="password" name="registerPassword" placeholder="Password">
         <input type="submit" value="Register">
     </form>
+    <a href="#" id="goLogin">Log in</a>
 </template>
