tweaking code on the login screen

--- a/client/templates/includes/register.html
+++ b/client/templates/includes/register.html
@@ -1,8 +1,9 @@
 <template name="register">
     <form>
+        <input type="text" name="registerUsername" placeholder="Username">
         <input type="email" name="registerEmail" placeholder="Email">
         <input type="password" name="registerPassword" placeholder="Password">
-        <input type="submit" value="Register">
+        <input type="submit" value="Register" id="registered">
     </form>
     <a href="#" id="goLogin">Log in</a>
 </template>
