added an arrow to the create and account text

--- a/client/templates/includes/login.html
+++ b/client/templates/includes/login.html
@@ -4,5 +4,5 @@
         <input type="password" name="loginPassword" placeholder="Password">
         <input type="submit" value="Login">
     </form>
-    <a href="#" id="goRegister">Register</a>
+    <a href="#" id="goRegister">Create an account <span class="fa fa-arrow-right"></span></a>
 </template>
