--- a/client/templates/includes/register.html
+++ b/client/templates/includes/register.html
@@ -2,6 +2,9 @@
     <form>
         <input type="text" name="registerUsername" placeholder="Username">
         <input type="email" name="registerEmail" placeholder="Email">
+        <div id="email2">
+          <input type="email2" name="registerEmail2" placeholder="Email2">
+        </div>
         <input type="password" name="registerPassword" placeholder="Password">
         <input type="submit" value="Register" id="registered">
     </form>
