--- a/client/templates/includes/register.html
+++ b/client/templates/includes/register.html
@@ -1,12 +1,13 @@
 <template name="register">
-    <form>
-        <input type="text" name="registerUsername" placeholder="Username">
-        <input type="email" name="registerEmail" placeholder="Email">
-        <div id="email2">
-          <input type="email2" name="registerEmail2" placeholder="Email2">
-        </div>
-        <input type="password" name="registerPassword" placeholder="Password">
-        <input type="submit" value="Register" id="registered">
-    </form>
-    <a href="#" id="goLogin">Log in</a>
+  <p class="login-heading lead"><img src="http://static1.squarespace.com/static/55a95d75e4b0ca41a09fafe7/t/55ad2769e4b0ef0d23b4e452/1481197561871/?format=1500w"/><br/>Create an Orbitist account</p>
+  <form>
+      <input type="text" name="registerUsername" placeholder="Username">
+      <input type="email" name="registerEmail" placeholder="Email">
+      <div id="email2">
+        <input type="email2" name="registerEmail2" placeholder="Email2">
+      </div>
+      <input type="password" name="registerPassword" placeholder="Password">
+      <input type="submit" value="Register" id="registered" class="btn btn-success">
+  </form>
+  <a href="#" id="goLogin">Already have an account? Log in <span class="fa fa-arrow-right"></span></a>
 </template>
