--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,6 +1,6 @@
 <template name="layout">
+  {{> navbar}}
   <div class="container">
-    {{> toolbar}}
     {{> errors}}
     <div id="main">
       {{> yield}}
