--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -11,6 +11,7 @@ a:hover {
 
 #main {
   position: relative;
+  width: 100%;
 }
 
 .page {
@@ -23,29 +24,6 @@ a:hover {
   height: 300px;
 }
 
-.story {
-  /* For modern browsers */
-  /* For IE 6/7 (trigger hasLayout) */
-  *zoom: 1;
-  position: relative;
-  opacity: 1;
-}
-.story.invisible {
-  opacity: 0;
-}
-.story.instant {
-  -webkit-transition: none;
-  -moz-transition: none;
-  -o-transition: none;
-  transition: none;
-}
-.story.animate {
-  -webkit-transition: all 300ms 0ms;
-  -moz-transition: all 300ms 0ms ease-in;
-  -o-transition: all 300ms 0ms ease-in;
-  transition: all 300ms 0ms ease-in;
-}
-
 .dropdown-menu span {
   display: block;
   padding: 3px 20px;
@@ -53,11 +31,6 @@ a:hover {
   line-height: 20px;
   color: #bbb;
   white-space: nowrap; }
-
-.stories .spinner-container {
-  position: relative;
-  height: 100px;
-}
 
 @-webkit-keyframes fadeOut {
   0% {opacity: 0;}
