--- a/client/templates/stories/stories_list.html
+++ b/client/templates/stories/stories_list.html
@@ -8,7 +8,9 @@
           {{> storyItem}}
         {{/each}}
         {{#if nextPath}}
-          <a class="load-more btn btn-default" href="{{nextPath}}">Load more</a>
+          <div class="story">
+            <a class="load-more btn btn-default" href="{{nextPath}}">Load more</a>
+          </div>
         {{else}}
           {{#unless ready}}
             {{> spinner}}
