--- a/client/templates/stories/stories_list.html
+++ b/client/templates/stories/stories_list.html
@@ -3,20 +3,20 @@
     {{> spinner}}
   {{else}}
     {{#if currentUser}}
-      <div class="stories">
-        {{#each stories}}
-          {{> storyItem}}
-        {{/each}}
-        {{#if nextPath}}
-          <div class="story">
+      <div class="container">
+        <div class="stories">
+          {{#each stories}}
+            {{> storyItem}}
+          {{/each}}
+          {{#if nextPath}}
             <a class="load-more btn btn-default" href="{{nextPath}}">Load more</a>
-          </div>
-        {{else}}
-          {{#unless ready}}
-            {{> spinner}}
-          {{/unless}}
-        {{/if}}
-      </div>
+          {{else}}
+            {{#unless ready}}
+              {{> spinner}}
+            {{/unless}}
+          {{/if}}
+        </div>
+      </div><!-- container -->
     {{else}}
       {{> loginScreen}}
     {{/if}}
