--- a/client/templates/includes/navbar.html
+++ b/client/templates/includes/navbar.html
@@ -13,11 +13,9 @@
         </a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
-        <ul class="nav navbar-nav">
-          {{#if currentUser}}<li><a href="{{pathFor 'storySubmit'}}">Submit Story</a></li>{{/if}}
-        </ul>
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
+            <li><a href="{{pathFor 'storySubmit'}}"><i class="fa fa-plus-circle" aria-hidden="true"></i></a></li>
             {{>logout}}
           {{/if}}
         </ul>
