--- a/client/templates/stories/stories_all.html
+++ b/client/templates/stories/stories_all.html
@@ -1,10 +1,9 @@
-<template name="storiesList">
+<template name="storiesAll">
   {{#if loggingIn}}
     {{> spinner}}
   {{else}}
     {{#if currentUser}}
       <div class="container">
-        <p><a href="{{pathFor 'storySubmit'}}"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create Story</a></p>
         <div class="stories">
           {{#each stories}}
             {{> storyItem}}
