--- a/client/templates/stories/story_submit.html
+++ b/client/templates/stories/story_submit.html
@@ -1,5 +1,5 @@
 <template name="storySubmit">
-  <form class="main form page">
+  <form>
     <div class="form-group {{errorClass 'title'}}">
       <label class="control-label" for="title">Title</label>
       <div class="controls">
