--- a/client/templates/tiles/tile_submit.html
+++ b/client/templates/tiles/tile_submit.html
@@ -2,9 +2,9 @@
   <form name="tile" class="tile-form form">
     <div class="form-group {{errorClass 'body'}}">
         <div class="controls">
-            <label for="body">Create a tile</label>
-            <textarea name="body" id="body" class="form-control" rows="3"></textarea>
-            <span class="help-block">{{errorMessage 'body'}}</span>
+            <label for="text">Create Text</label>
+            <textarea name="text" id="text" class="form-control" rows="5"></textarea>
+            <span class="help-block">{{errorMessage 'text'}}</span>
         </div>
     </div>
     <button type="submit" class="btn btn-primary">Add Tile</button>
