--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -3,6 +3,7 @@
     <h4>
       <span class="author">{{author}}</span>
       <span class="date">on {{submittedText}}</span>
+      {{tileType}}
     </h4>
     <p>{{text}}</p>
   </li>
