--- a/client/templates/tiles/tile_submit_text.html
+++ b/client/templates/tiles/tile_submit_text.html
@@ -1,4 +1,4 @@
-<template name="tileSubmit">
+<template name="tileSubmitText">
   <form name="tile" class="tile-form form">
     <div class="form-group {{errorClass 'body'}}">
         <div class="controls">
