--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -9,6 +9,9 @@
     </ul>
 
     {{#if currentUser}}
+      <p><a href="#" class="create-tile"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create a tile</a></p>
+
+
       <a class="btn btn-primary" id="tileTypeText">Text</a>
       <a class="btn btn-primary" id="tileTypeImage">Image</a>
 
