Created basic ui for submitting tiles

--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -11,16 +11,8 @@
     {{#if currentUser}}
       <p><a href="#" class="create-tile"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create a tile</a></p>
 
-
-      <a class="btn btn-primary" id="tileTypeText">Text</a>
-      <a class="btn btn-primary" id="tileTypeImage">Image</a>
-
-      {{#if isTileType 'text'}}
-        {{> tileSubmitText}}
-      {{/if}}
-
-      {{#if isTileType 'image'}}
-        <p>Image form here</p>
+      {{#if showTileMenu 'true'}}
+        {{> tileMenu}}
       {{/if}}
 
     {{else}}
