Basic design for text tiles

--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -1,10 +1,5 @@
 <template name="tileItem">
-  <li>
-    <h4>
-      <span class="author">{{author}}</span>
-      <span class="date">on {{submittedText}}</span>
-      {{tileType}}
-    </h4>
+  <div class="tile-text">
     <p>{{text}}</p>
-  </li>
+  </div><!-- tile-text -->
 </template>
