--- a/client/stylesheets/story_item.css
+++ b/client/stylesheets/story_item.css
@@ -2,7 +2,9 @@
   width: 100%;
   border-radius: 3px;
   border: #ccc solid 1px;
-  margin-bottom: 20px;
+  padding: 20px;
+  margin: 20px auto;
+  max-width: 640px;
 }
 
 .story.invisible {
