--- a/client/templates/stories/stories_list.html
+++ b/client/templates/stories/stories_list.html
@@ -4,7 +4,7 @@
   {{else}}
     {{#if currentUser}}
       <div class="container">
-        <p><a href="{{pathFor 'storySubmit'}}"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create Story</a></p>
+        <p class="btn-add"><a href="{{pathFor 'storySubmit'}}"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create Story</a></p>
         <div class="stories">
           {{#each stories}}
             {{> storyItem}}
