--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -7,7 +7,7 @@
     {{/each}}
 
     {{#if currentUser}}
-      <p class="btn-add"><a href="#" class="create-tile"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create a tile</a></p>
+      <p class="btn-add"><a href="#" class="create-tile"><i class="fa fa-plus-circle" aria-hidden="true"></i> Add a tile</a></p>
 
       {{#if showTileMenu 'true'}}
         {{> tileMenu}}
