--- a/client/stylesheets/popup_menus.css
+++ b/client/stylesheets/popup_menus.css
@@ -11,7 +11,8 @@
 .popup-menu {
   margin: 0 auto;
   margin-top: 100px;
-  width: 300px;
+  width: 100%;
+  max-width: 640px;
   padding: 20px;
   background-color: white;
   border-radius: 3px;
