--- a/client/templates/stories/stories_list.html
+++ b/client/templates/stories/stories_list.html
@@ -4,12 +4,8 @@
   {{else}}
     {{#if currentUser}}
 
-      {{#if showStoryMenu 'true'}}
-        {{> storyMenu}}
-      {{/if}}
-
       <div class="container">
-        <p class="btn-add"><a href="#" class="create-story"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create Story</a></p>
+        <p class="btn-add"><a href="{{pathFor 'storySubmit'}}"><i class="fa fa-plus-circle" aria-hidden="true"></i> Create Story</a></p>
         <div class="stories">
           {{#each stories}}
             {{> storyItem}}
