Trying to get the tile edit page working

--- a/client/templates/tiles/text/tile_item_text.html
+++ b/client/templates/tiles/text/tile_item_text.html
@@ -1,5 +1,6 @@
 <template name="tileItem">
   <div class="tile-text">
+    {{#if ownTile}}<small><a href="{{pathFor 'tileEditText'}}"><i class="fa fa-pencil" aria-hidden="true"></i> edit</a></small>{{/if}}
     <p>{{text}}</p>
   </div><!-- tile-text -->
 </template>
