--- a/client/templates/tiles/text/tile_edit_text.html
+++ b/client/templates/tiles/text/tile_edit_text.html
@@ -1,14 +1,14 @@
 <template name="tileEditText">
-  <form name="tile" class="tile-form form">
-    <div class="form-group {{errorClass 'body'}}">
-        <div class="controls">
-            <label for="text">Create Text</label>
-            <textarea name="text" id="text" class="form-control" rows="5" value="{{text}}"></textarea>
-            <span class="help-block">{{errorMessage 'text'}}</span>
-        </div>
+  <form>
+    <div class="form-group {{errorClass 'title'}}">
+      <label class="control-label" for="title">Text</label>
+      <div class="controls">
+        <textarea name="text" id="text" class="form-control" rows="5" value="{{text}}"></textarea>
+        <span class="help-block">{{errorMessage 'title'}}</span>
+      </div>
     </div>
-    <button type="submit" class="btn btn-primary">Update tile</button>
+    <input type="submit" value="Submit" class="btn btn-primary submit"/>
     <hr/>
-    <a class="btn btn-danger delete" href="#">Delete tile</a>
+    <a class="btn btn-danger delete" href="#">Delete story</a>
   </form>
 </template>
