--- a/client/templates/tiles/text/tile_edit_text.html
+++ b/client/templates/tiles/text/tile_edit_text.html
@@ -4,11 +4,11 @@
       <label class="control-label" for="title">Text</label>
       <div class="controls">
         <textarea name="text" id="text" class="form-control" rows="5" value="{{text}}"></textarea>
-        <span class="help-block">{{errorMessage 'title'}}</span>
+        <span class="help-block">{{errorMessage 'text'}}</span>
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit"/>
     <hr/>
-    <a class="btn btn-danger delete" href="#">Delete story</a>
+    <a class="btn btn-danger delete" href="#">Delete tile</a>
   </form>
 </template>
