--- a/client/templates/includes/navbar.html
+++ b/client/templates/includes/navbar.html
@@ -15,6 +15,7 @@
       <div class="collapse navbar-collapse" id="navigation">
         <ul class="nav navbar-nav navbar-right">
           {{#if currentUser}}
+            <li><a><i class="fa fa-user"></i> {{currentUser.username}}</a></li>
             {{>logout}}
           {{/if}}
         </ul>
