updated the tileItem Text name

--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -5,7 +5,7 @@
     <div id="tile-items">
       {{#each tiles}}
         <div class="tile-item">
-          {{> tileItem}}
+          {{> tileItemText}}
         </div><!-- tileItem -->
       {{/each}}
     </div><!-- #items -->
