--- a/client/templates/tiles/text/tile_item_text.html
+++ b/client/templates/tiles/text/tile_item_text.html
@@ -1,4 +1,4 @@
-<template name="tileItem">
+<template name="tileItemText">
   <div class="tile-text">
     {{#if ownTile}}<small><a href="{{pathFor 'tileEditText'}}"><i class="fa fa-pencil" aria-hidden="true"></i> edit</a></small>{{/if}}
     <p>{{text}}</p>
