updated password type field

--- a/client/templates/includes/register.html
+++ b/client/templates/includes/register.html
@@ -7,7 +7,7 @@
     <input type="text" name="registerUsername" placeholder="Username">
     <input type="email" name="registerEmail" placeholder="Email">
     <input type="password" name="registerPassword" placeholder="Password">
-    <input type="secret" name="registerSecret" placeholder="Secret Password">
+    <input type="password" name="registerSecret" placeholder="Secret Password">
     <input type="submit" value="Register" id="registered" class="btn btn-success">
   </form>
   <a href="#" id="goLogin">Already have an account? Log in <span class="fa fa-arrow-right"></span></a>
