wired up cloudinary and image tile type!

--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -14,7 +14,7 @@
     <div id="tile-items">
       {{#each tiles}}
         <div class="tile-item">
-          {{> tileItemText}}
+          {{> tileItem}}
         </div><!-- tileItem -->
       {{/each}}
     </div><!-- #items -->
