--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -9,7 +9,7 @@
       {{/if}}
 
       {{#if isTileType 'image'}}
-        <p>Image form here</p>
+        {{> tileSubmitImage}}
       {{/if}}
 
     </div><!-- popup-menu -->
