--- a/client/templates/includes/login.html
+++ b/client/templates/includes/login.html
@@ -1,7 +1,7 @@
 <template name="login">
   <p class="login-heading lead"><img src="http://static1.squarespace.com/static/55a95d75e4b0ca41a09fafe7/t/55ad2769e4b0ef0d23b4e452/1481197561871/?format=1500w"/><br/>Log in to Orbitist</p>
   <form>
-      <input type="email" name="loginEmail" placeholder="Email">
+      <input type="email" name="loginEmail" placeholder="Username/email">
       <input type="password" name="loginPassword" placeholder="Password">
       <input type="submit" value="Login" class="btn btn-success">
   </form>
