--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -1,6 +1,7 @@
-<template name="tileItemText">
-  <div class="tile-text">
+<template name="tileItem">
+  <div class="tile">
     {{#if ownTile}}<small><a href="{{pathFor 'tileEditText'}}"><i class="fa fa-pencil" aria-hidden="true"></i> edit</a></small>{{/if}}
     <p>{{text}}</p>
+    <img class="img-responsive" src ="{{imageUrl}}"/>
   </div><!-- tile-text -->
 </template>
