--- a/client/templates/stories/story_page.html
+++ b/client/templates/stories/story_page.html
@@ -1,6 +1,6 @@
 <template name="storyPage">
   <div class="story-page page">
-    {{> storyItem}}
+    {{> storyHeader}}
 
     {{#if currentUser}}
       {{#if ownStory}}
