--- a/client/templates/tiles/text/tile_submit_text.html
+++ b/client/templates/tiles/text/tile_submit_text.html
@@ -2,8 +2,7 @@
   <form name="tile" class="tile-form form">
     <div class="form-group {{errorClass 'body'}}">
         <div class="controls">
-            <label for="text">Create Text</label>
-            <textarea name="text" id="text" class="form-control" rows="5"></textarea>
+            <textarea name="text" id="text" class="form-control" rows="5" placeholder="Tell a story..."></textarea>
             <span class="help-block">{{errorMessage 'text'}}</span>
         </div>
     </div>
