--- a/client/templates/tiles/text/tile_submit_text.html
+++ b/client/templates/tiles/text/tile_submit_text.html
@@ -4,6 +4,13 @@
         <div class="controls">
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Tell a story..."></textarea>
             <span class="help-block">{{errorMessage 'text'}}</span>
+            <hr>
+            <label>Location</label>
+            <input name="locationSearch" id="locationSearch" type="text" value="" placeholder="Search for a location..." class="form-control"/>
+            <div id="map" style="height:200px;"></div>
+            <input name="lat" type="text" value="" placeholder="Latitude" class="form-control">
+            <input name="lng" type="text" value="" placeholder="Longitude" class="form-control">
+            <input name="formatted_address" type="text" value="" placeholder="Address" class="form-control">
         </div>
     </div>
     <button type="submit" class="btn btn-primary">Add Tile</button>
