set up advanced location menu

--- a/client/templates/tiles/image/tile_submit_image.html
+++ b/client/templates/tiles/image/tile_submit_image.html
@@ -11,6 +11,6 @@
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your image..."></textarea>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Add Tile</button>
+    <button type="submit" class="btn btn-lg btn-primary">Add Tile</button>
   </form>
 </template>
