--- a/client/templates/includes/navbar.html
+++ b/client/templates/includes/navbar.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="{{pathFor 'storiesList'}}">
-          <img alt="Brand" src="http://static1.squarespace.com/static/55a95d75e4b0ca41a09fafe7/t/55ad2769e4b0ef0d23b4e452/1481197561871/?format=1500w">
+          <img alt="Brand" src="https://res.cloudinary.com/orbitist/image/upload/v1482159213/logo_blue_button_100_sjpiii.png">
         </a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
