--- a/client/templates/includes/register.html
+++ b/client/templates/includes/register.html
@@ -1,5 +1,5 @@
 <template name="register">
-  <p class="login-heading lead"><img src="http://static1.squarespace.com/static/55a95d75e4b0ca41a09fafe7/t/55ad2769e4b0ef0d23b4e452/1481197561871/?format=1500w"/><br/>Create an Orbitist account</p>
+  <p class="login-heading lead"><img src="https://res.cloudinary.com/orbitist/image/upload/v1482159213/logo_blue_button_100_sjpiii.png"/><br/>Create an Orbitist account</p>
   <form>
     <div id="email2">
       <input type="email2" name="registerEmail2" placeholder="Email2">
