--- a/client/templates/includes/login.html
+++ b/client/templates/includes/login.html
@@ -1,7 +1,7 @@
 <template name="login">
   <p class="login-heading lead"><img src="https://res.cloudinary.com/orbitist/image/upload/v1482159213/logo_blue_button_100_sjpiii.png"/><br/>Log in to Orbitist</p>
   <form>
-      <input type="email" name="loginEmail" placeholder="Username/email">
+      <input type="text" name="loginEmail" placeholder="Username/email">
       <input type="password" name="loginPassword" placeholder="Password">
       <input type="submit" value="Login" class="btn btn-success">
   </form>
