--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -3,6 +3,7 @@
     <div class="popup-menu">
       <a class="btn btn-primary" id="tileTypeText"><i class="fa fa-font" aria-hidden="true"></i> Text</a>
       <a class="btn btn-primary" id="tileTypeImage"><i class="fa fa-camera-retro" aria-hidden="true"></i> Image</a>
+      <a class="btn btn-primary" id="tileTypeVideo"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a>
 
       {{#if isTileType 'text'}}
         {{> tileSubmitText}}
@@ -10,6 +11,10 @@
 
       {{#if isTileType 'image'}}
         {{> tileSubmitImage}}
+      {{/if}}
+
+      {{#if isTileType 'video'}}
+        {{> tileSubmitVideo}}
       {{/if}}
 
     </div><!-- popup-menu -->
