--- a/client/templates/tiles/video/tile_edit_video.html
+++ b/client/templates/tiles/video/tile_edit_video.html
@@ -5,7 +5,7 @@
           {{> uploading}}
         {{/if}}
         <div class="controls">
-            <div class="videoUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}"/></div>
+            <div class="videoUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.jpg"/></div>
             <input type="file" name="video" id="video" class="form-control" accept="video/mp4,video/x-m4v,video/*" value="">
             <span class="help-block">{{errorMessage 'video'}}</span>
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your video..." value="{{text}}"></textarea>
