finished video integration

--- a/client/templates/tiles/tile_item.html
+++ b/client/templates/tiles/tile_item.html
@@ -19,7 +19,7 @@
     {{/if}}
 
     {{#if tileTypeVideo}}
-      <video class="img-responsive">
+      <video class="img-responsive" controls poster="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.jpg">
         <source src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.webm" type="video/webm"/>
         <source src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.mp4" type="video/mp4"/>
         <source src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.ogv" type="video/ogg"/>
