--- a/client/templates/tiles/video/tile_edit_video.html
+++ b/client/templates/tiles/video/tile_edit_video.html
@@ -5,11 +5,17 @@
           {{> uploading}}
         {{/if}}
         <div class="controls">
-            <div class="videoUploadThumb"><img class="img-responsive" src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.jpg"/></div>
-            <input type="file" name="video" id="video" class="form-control" accept="video/mp4,video/x-m4v,video/*" value="">
-            <span class="help-block">{{errorMessage 'video'}}</span>
-            <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your video..." value="{{text}}"></textarea>
-            {{> tileLocationControlEdit}}
+          <div class="videoUploadThumb">
+            <video class="img-responsive" controls poster="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.jpg">
+              <source src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.webm" type="video/webm"/>
+              <source src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.mp4" type="video/mp4"/>
+              <source src="https://res.cloudinary.com/orbitist/video/upload/{{videoId}}.ogv" type="video/ogg"/>
+            </video>
+          </div>
+          <input type="file" name="video" id="video" class="form-control" accept="video/mp4,video/x-m4v,video/*" value="">
+          <span class="help-block">{{errorMessage 'video'}}</span>
+          <textarea name="text" id="text" class="form-control" rows="5" placeholder="Describe your video..." value="{{text}}"></textarea>
+          {{> tileLocationControlEdit}}
         </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit"/>
