added iframe templates

--- a/client/templates/tiles/text/tile_submit_text.html
+++ b/client/templates/tiles/text/tile_submit_text.html
@@ -1,7 +1,7 @@
 <template name="tileSubmitText">
   <hr>
   <form name="tile" class="tile-form form">
-    <div class="form-group {{errorClass 'body'}}">
+    <div class="form-group {{errorClass 'text'}}">
         <div class="controls">
             <textarea name="text" id="text" class="form-control" rows="5" placeholder="Tell a story..."></textarea>
             <span class="help-block">{{errorMessage 'text'}}</span>
