--- a/client/templates/tiles/text/tile_edit_text.html
+++ b/client/templates/tiles/text/tile_edit_text.html
@@ -1,6 +1,6 @@
 <template name="tileEditText">
   <form>
-    <div class="form-group {{errorClass 'title'}}">
+    <div class="form-group {{errorClass 'text'}}">
       <label class="control-label" for="title">Text</label>
       <div class="controls">
         <textarea name="text" id="text" class="form-control" rows="5" value="{{text}}"></textarea>
