added iframe menu item

--- a/client/templates/tiles/tile_menu.html
+++ b/client/templates/tiles/tile_menu.html
@@ -4,6 +4,8 @@
       <a class="btn btn-primary" id="tileTypeText"><i class="fa fa-font" aria-hidden="true"></i> Text</a>
       <a class="btn btn-primary" id="tileTypeImage"><i class="fa fa-camera-retro" aria-hidden="true"></i> Image</a>
       <a class="btn btn-primary" id="tileTypeVideo"><i class="fa fa-video-camera" aria-hidden="true"></i> Video</a>
+      <a class="btn btn-primary" id="tileTypeIframe">&lt;iframe&gt;</a>
+
 
       {{#if isTileType 'text'}}
         {{> tileSubmitText}}
